--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,8 @@
         <title>Home</title>
 </head>
 <body>
-        <h1>My Website Text</h1>
           
-	<h2>Do you want to watering your plant ? </h2>
+	<h2> Welecome to the SKY Garden </h2>
 	
 <form method="post" action="#">
  <p> Moisture <input type="number" name="moistureContent" /> </p>
